# StackGen

./: .gitignore  .gitmodules  .sourcery.yml  Cartfile  Cartfile.resolved  Package.resolved  Package.resources  Package.swift  README.md  bsgfile.yml  codecov.yml  project.yml  stackgen.yml  taskfile  workspace.yml
.fixtures/StackGen_Swift_BuildSystem_Bazel/: .bazelrc  Mintfile  WORKSPACE  stackgen.yml  taskfile
.fixtures/StackGen_Swift_BuildSystem_Bazel/BazelConfig/: BUILD.bazel  config.bzl
.fixtures/StackGen_Swift_BuildSystem_Bazel/BazelConfig/ExportedFiles/: ResourceBundleInfo.plist
.fixtures/StackGen_Swift_BuildSystem_Bazel/Libraries/App/: BUILD.bazel
.fixtures/StackGen_Swift_BuildSystem_Bazel/Libraries/App/SupportingFiles/: Info.plist
.fixtures/StackGen_Swift_BuildSystem_Bazel/Libraries/SwiftModule1/: BUILD.bazel
.fixtures/StackGen_Swift_BuildSystem_Bazel/Libraries/SwiftModule2/: BUILD.bazel
.fixtures/StackGen_Swift_BuildSystem_Bazel/Libraries/SwiftModule3/: BUILD.bazel
.fixtures/StackGen_Swift_BuildSystem_Cocoapods/: Gemfile  Podfile  SwiftModule1.podspec  SwiftModule2.podspec  SwiftModule3.podspec  project.yml  stackgen.yml  taskfile
.fixtures/StackGen_Swift_BuildSystem_Xcodegen/: Gemfile  Mintfile  stackgen.yml  taskfile
.fixtures/StackGen_Swift_Starter_CommandLine/: Package.swift
.fixtures/Swift_BuildSystem_Bazel/: .bazelrc  BUILD.bazel  WORKSPACE  bsgfile.yml  stackgen.yml  taskfile
.fixtures/Swift_BuildSystem_Bazel/Libraries/SwiftModule2/: BUILD.bazel
.fixtures/Swift_BuildSystem_Bazel/Libraries/SwiftModule3/: BUILD.bazel
.fixtures/Swift_BuildSystem_Cocoapods/: Gemfile  SwiftModule3.podspec  bsgfile.yml  project.yml  stackgen.yml  taskfile
.fixtures/Swift_BuildSystem_Xcodegen/: bsgfile.yml  taskfile
.fixtures/Swift_Starter_CommandLine/: .gitignore  Package.swift
.fixtures/bazel/: .bazelrc  bsgfile.yml  lefthook.yml  taskfile
.fixtures/bazel/Libraries/App/: BUILD.bazel
.fixtures/bazel/Libraries/App/src/main/swift/: MainViewController.swift
.fixtures/bazel/Libraries/SwiftModule1/: BUILD.bazel
.fixtures/bazel/Libraries/SwiftModule1/src/main/swift/: Source.swift
.fixtures/cocoapods/: Gemfile  Mintfile  SwiftModule1.podspec  SwiftModule2.podspec  SwiftModule3.podspec  bsgfile.yml  project.yml  taskfile
.fixtures/xcodegen/: Gemfile  Mintfile  bsgfile.yml  project.yml  taskfile
.github/: release-drafter.yml
.github/workflows/: ci-master.yml  ci.yml  deprecated.yml  release.yml  test.yml
Documentation/PackageReference/: Package.md
Documentation/Reference/: README.md
Examples/: bsg.yml  module.yml  workspace.yml
Examples/swift/: bsg.yml  bsgfile.yml  stackgen.yml
Fixtures/XcodeGen/: workspace.yml
Fixtures/bazel/: Cartfile  bsgfile.yml  taskfile
Fixtures/bazel/Libraries/App/: BUILD.bazel
Fixtures/bazel/Libraries/SwiftModule1/: BUILD.bazel
Fixtures/bazel/Libraries/SwiftModule2/: BUILD.bazel
Fixtures/bazel/Libraries/SwiftModule3/: BUILD.bazel
Fixtures/cocoapods/: Podfile  SwiftModule.podspec  SwiftModule1.podspec  SwiftModule2.podspec  SwiftModule3.podspec  bsg.yml  bsgfile.yml  project.yml  taskfile  workspace.yml
Fixtures/xcodegen/: Mintfile  bsg.yml  bsgfile.yml  project.yml  taskfile  workspace.yml
SelfGenerateTemplates/: mintfile.yml  script-setup.yml
SourceryTemplates/: AutoInit.stencil  AutoMerge.stencil
Sources/BuildSystemGenerator/: main.swift
Sources/BuildSystemGeneratorCLI/: CLI.swift  Command.swift  MessageGenerator.swift  Path+ConvertibleFromString.swift  SwiftBuildSystemGenerator.swift
Sources/StackGen/: main.swift
Sources/StackGenCLI/: CLI.swift  MessageGenerator.swift
Sources/StackGenKit/: VERSION.swift
Sources/SwiftBuildSystemGenerator/: main.swift
Sources/SwiftBuildSystemGeneratorCLI/: MessageGenerator.swift  SwiftBuildSystemGenerator.swift
Sources/SwiftBuildSystemGeneratorKit/: Encodable+dictionary.swift  File.swift  FileIterator.swift  (+5 more)
StackGenTemplates/StackGen_Swift_BuildSystem_Bazel/module/: BUILD.bazel
StackGenTemplates/StackGen_Swift_BuildSystem_Bazel/root/: .bazelrc  BUILD.bazel  WORKSPACE
StackGenTemplates/StackGen_Swift_BuildSystem_Bazel/root/BazelConfig/: BUILD.bazel  config.bzl
Templates/: podspec  podspec.mustache  project.yml  project.yml.mustache
Templates/StackGen_Swift_BuildSystem_Bazel/module/: BUILD.bazel
Templates/StackGen_Swift_BuildSystem_Bazel/root/: .bazelrc  .bazelversion  BUILD.bazel
Templates/Swift_BuildSystem_Bazel/root/: .bazelrc  BUILD.bazel  Cartfile  WORKSPACE
TemplatesSelfGenerate/: Gemfile.yml  Mintfile.yml  lefthook.yml  module.yml  taskfile.yml  templates.yml
TemplatesSourcery/: AutoCodable.swifttemplate  AutoInit.stencil
Tests/: LinuxMain.swift
_deprecated/: RawWrapper.swift
cucu/: project.yml.mustache
docs/: Action.md  BundledTemplateGroup.md  CleanAction.md  Context.md  Context_Env.md  Context_Input.md  Context_Output.md  CustomError.md  CustomError_Kind.md  Env.md  FirstPartyModule_Input.md  FirstPartyModule_Output.md  GenerateAction.md  Options.md  Options_CLI.md  Options_Resolved.md  Options_StackGenFile.md  README.md  RegularExpression.md  Reporter.md  Reporter_Emoji.md  StackGenError.md  StackGenError_Kind.md  StackGenFile.md  StencilFilter.md  StencilFilterInterface.md  StencilFilter_Absolut.md  StencilFilter_ExpandDependencies.md  StencilFilter_PathExists.md  StencilFilter_RelativeToModule.md  StencilFilter_RelativeToRoot.md  TemplateEngine.md  TemplateRenderer.md  TemplateSpec.md  TemplateSpec_Mode.md  TemplateSpec__Input.md  TemplatesFile.md  TemplatesFileResolver.md  ThirdPartyModule.md  VERSION.md  (+2 more)
docsMarkup/: Context.md  Context_Middleware.md  CustomError_Kind.md  Env.md  FirstPartyModule.md  FirstPartyModule_Input.md  Global.md  Home.md  ModuleKind.md  ModuleResolver.md  Options_StackGenFile.md  Path_Output.md  StackGenFile.md  StencilExtensions.md  StencilFilter_Absolut.md  StencilFilter_RelativeToRoot.md  TemplateSpec.md  TemplateSpec_Mode.md  ThirdPartyModule__Input.md  ThirdPartyModule__Output.md  _Footer.md
scripts/: create-projects.sh  setup.sh
templates/: project.mustache  project.yml
(+560 files in other folders)
