load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")
load("//BazelConfig:config.bzl", "swift_copts", "resource_extensions")

##########################
# Main module rules
##########################

apple_framework(
  name = "App",
  srcs = glob(["src/main/swift/**/*.swift"]),
  deps = [
    "//Libraries/SwiftModule1:SwiftModule1",
    "//Libraries/SwiftModule3:SwiftModule3",
  ],
  swift_copts = swift_copts(),
  data = glob(
    ["src/main/resources"]
    + ["src/main/swift/**/*." + x for x in resource_extensions]
  ),
  visibility = ["//visibility:public"],
)

ios_application(
  name = "AppBundle",
  bundle_id = "com.acecilia.App",
  families = ["iphone", "ipad",],
  infoplists = ["SupportingFiles/Info.plist"],
  minimum_os_version = "13.0",
  deps = ["App"],
  visibility = ["//visibility:public"],
)

##########################
# Unit test rules
##########################

apple_framework(
  name = "AppTestsLib",
  srcs = glob(["src/test/swift/**/*.swift"]),
  deps = [
    ":App",
  ],
  data = glob(
    ["src/test/resources"]
    + ["src/test/swift/**/*." + x for x in resource_extensions]
  ),
  swift_copts = swift_copts(),
)

ios_unit_test(
  name = "AppTests",
  deps = [":AppTestsLib"],
  minimum_os_version = "13.0",
  test_host = ":AppBundle",
  tags = ["no-sandbox"], # Needed for the snapshot tests to be able to access the reference images
  runner = "//BazelConfig:test_runner",
)
